# ObfuScan

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  apk_scan_limits.cpp  apk_scan_limits.h  custom_linker_detector.cpp  custom_linker_detector.h  disasm_arm64.cpp  disasm_arm64.h  elf_dynamic.cpp  elf_dynamic.h  main.cpp  vmp_detector.cpp  vmp_detector.h  vmp_linkage.cpp  vmp_linkage.h  web_server.py
deploy/windows/: .gitignore  Caddyfile.example  DEPLOYMENT.md  Start-ObfuScan.ps1  Stop-ObfuScan.ps1  caddy.env.example.ps1  obfuscan.config.example.psd1
tests/: apk_scan_limits_tests.cpp  corpus_regression.py  custom_linker_detector_tests.cpp  elf_dynamic_tests.cpp  resource_limit_regression.py  vmp_detector_tests.cpp  vmp_linkage_tests.cpp
